# cambrian

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: compose.yml
docs/: cli-json.md
examples/: .gitignore  README.md  bootstrap.sh  cambrian.toml  current.sql  docker-compose.yml
prototypes/: M4_PRECONDITION_RESULT.md  m4_rollback.py
src/cambrian/: __init__.py  __main__.py  catalog.py  cli.py  config.py  errors.py
src/cambrian/iceberg/: __init__.py  affected.py  checkpoint.py  txn.py
src/cambrian/migrate/: __init__.py  commit.py  runner.py  sync.py  watch.py
src/cambrian/sidecar/: __init__.py  bootstrap.py  events.py  schema.py  selfmigrate.py
src/cambrian/sql/: __init__.py  ast.py  dialect.py  dispatch.py  include.py
tests/fixtures/: iceberg_corpus.py
tests/fixtures/iceberg-corpus/: create_table.sql  create_table_nested.sql  create_table_partition.sql  data_ops.sql  drop_table.sql  identifier_fields.sql  namespace.sql  neg_branching.sql  neg_create.sql  neg_data_ops.sql  neg_procedures.sql  neg_pseudo.sql  neg_time_travel.sql  partition_evolution.sql  properties.sql  rename_table.sql  schema_add.sql  schema_alter.sql  schema_drop.sql  schema_rename.sql  sort_order.sql
tests/fixtures/v1-smoke/: cambrian.toml  current.sql
tests/integration/: conftest.py  test_apply_idempotent.py  test_checkpoint_property.py  test_checkpoint_rollback.py  test_commit.py  test_corpus_apply.py  test_init_status.py  test_reset.py  test_smoke.py  test_sync.py  test_v1_acceptance.py  test_watch.py
tests/unit/: test_affected.py  test_catalog.py  test_cli_config.py  test_commit.py  test_config.py  test_corpus_completeness.py  test_corpus_coverage.py  test_dialect.py  test_dispatch.py  test_errors.py  test_include.py  test_runner_reset.py  test_sidecar_schema.py  test_smoke.py  test_sync.py  test_watch.py
